--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^5.8.3",
     "webpack": "^5.100.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "copy-webpack-plugin": "^11.0.0"
   }
 }
